syntax = "proto3";

option go_package = "./;protoapi";

service Random {
    rpc GetDate (RequestDateTime) returns (DateTime);
    rpc GetRandom (RandomParams) returns (RandomInt);
    rpc GetRandomPass (RequestPass) returns (RandomPass);
}

// For random number
message RandomParams {
    int64 Seed = 1;
    int64 Place = 2;
}

message RandomInt {
    int64 Value = 1;
}

// For date time
message DateTime {
    string Value = 1;
}

message RequestDateTime {
    string Value = 2;
}

// For random password
message RequestPass {
    int64 Seed = 1;
    int64 Length = 8;
}

message RandomPass {
    string Password = 1;
}